syntax = "proto3";

package pb.v1;

import "google/protobuf/timestamp.proto";
import "pb/v1/user.proto";

option go_package = "github.com/yelaco/simple-bank/pb";

message LoginUserRequest {
  string username = 1;
  string password = 2;
}

message LoginUserResponse {
  User user = 1;
  string sessionId = 2;
  string accessToken = 3;
  string refreshToken = 4;
  google.protobuf.Timestamp accessTokenExpiresAt = 5;
  google.protobuf.Timestamp refreshTokenExpiresAt = 6;
}
