syntax = "proto3";

package pb.v1;

import "rpc_create_user.proto";
import "rpc_login_user.proto";

option go_package = "github.com/yelaco/simple-bank/pb";

service SimpleBank {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc LoginUser(LoginUserRequest) returns (LoginUserResponse) {}
}
